# vox-asr-tui

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  README_android.md  bootstrap-moonshine.sh  bootstrap-qwen-asr.sh  launch-tnt-proot.sh  pyproject.toml
csrc/: moonshine_asr.cpp
src/tnt/: app.py  audio.py  transcriber.py
src/tnt/widgets/: status.py  transcript.py
